plugins {
    id 'com.android.application'
    id 'ru.cleverpumpkin.proguard-dictionaries-generator'
}

android {
    compileSdk 33

    defaultConfig {
        applicationId "com.github.catvod.demo"
        minSdk 19
        targetSdk 33
        ndk { abiFilters "armeabi-v7a" }
        buildConfigField("String", "APP_ID", "\"${appId}\"")
        buildConfigField("String", "CLIENT_ID", "\"${clientId}\"")
    }

    buildTypes {
        release {
            minifyEnabled true
            proguardFiles 'proguard-rules.pro'
            proguardDictionaries {
                dictionaryNames = ["build/class-dictionary", "build/package-dictionary", "build/obfuscation-dictionary"]
                minLineLength 1
                maxLineLength 3
                linesCountInDictionary 100000
            }
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11
    }

    testOptions {
        unitTests {
            includeAndroidResources = true
            unitTests.returnDefaultValues = true
        }
    }
}

dependencies {
//    implementation project(path: ':tools')
    //Debug For HTTP/3
//    debugImplementation 'org.chromium.net:cronet-embedded:101.4951.41'
    implementation 'com.starkbank.ellipticcurve:starkbank-ecdsa:1.0.2'
//    implementation 'com.google.net.cronet:cronet-okhttp:0.1.0'
//    implementation 'androidx.annotation:annotation:1.5.0'
    implementation 'com.squareup.okhttp3:okhttp:3.12.13'
    implementation 'com.google.code.gson:gson:2.8.6'
    implementation 'cn.wanghaomiao:JsoupXpath:2.5.1'
    implementation 'com.google.zxing:core:3.3.0'
    implementation 'org.jsoup:jsoup:1.15.3'
    implementation 'com.jayway.jsonpath:json-path:2.8.0'
        //Rhino
    implementation 'org.mozilla:rhino:1.7.12'
    //加密解密库
    implementation('cn.hutool:hutool-crypto:5.7.11')

    //junit 打包删除
//    implementation group: 'org.json', name: 'json', version: '20190722'
    testImplementation 'junit:junit:4.13.2'
    //mockito
    testImplementation "org.mockito:mockito-core:3.3.3"
    //powermock
    testImplementation "org.powermock:powermock-module-junit4:2.0.9"
    testImplementation "org.powermock:powermock-module-junit4-rule:2.0.9"
    testImplementation "org.powermock:powermock-api-mockito2:2.0.9"
    testImplementation "org.powermock:powermock-classloading-xstream:2.0.9"
    testImplementation 'org.robolectric:robolectric:4.9'

//    testImplementation 'org.mock-server:mockserver-junit-rule-no-dependencies:5.14.0'
}